# Behind-Society

./: CMakeLists.txt  README.md  app_config.lua  imgui.ini
assets/: credits.txt
assets/dictionaries/: companies_factory_postfix.txt  companies_factory_prefix.txt  companies_insurance_postfix.txt  companies_insurance_prefix.txt  companies_shops_postfix.txt  companies_shops_prefix.txt  companies_social_postfix.txt  companies_social_prefix.txt  names_female.txt  names_male.txt
assets/effects/: banner.frag  banner.vert  blur.frag  blur_daystats.frag  crt.frag  default.frag
assets/gameplay/: abode_generators.lua  abode_graphics.lua  companies.lua  company_type.lua  computer_store.lua  day_log.lua  game_events.lua  gameconfig.lua  gameplay.lua  gui.lua  hud.lua  ingame_menu.lua  input.lua  intro.lua  main_menu.lua  messages.lua  name_generator.lua  personality.lua  resolutions.lua  tasks.lua  tile.lua  tutorial.lua
saves/: saves.txt
src/: abode.h  animation.h  animation_handler.cpp  animation_handler.h  company.h  computer.h  console.cpp  console.h  effects.cpp  effects.h  engine.cpp  engine.h  fade_effect.cpp  fade_effect.h  game.cpp  game.h  game_data.cpp  game_data.h  hacker.h  icon.c  input.h  lighting.h  main.cpp  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  script_binds.cpp  script_engine.cpp  script_engine.h  task.h  tilemap.cpp  tilemap.h  to_string.h
src/imgui/: imgui-SFML.cpp
